# simple-workflow

./: .gitignore  CLAUDE.md  CLAUDE.md.pipeline-hidden  CODEOWNERS  LICENSE  PRD.md  README.md  db.py  pyproject.toml  schemas.py
adapters/: __init__.py  claude_cli.py  codex.py  minimax.py  openrouter.py  zai.py
dashboard/: package.json  start.sh  tsconfig.json
engine/: README.md  __main__.py  agent.py  destination.py  eval.py  fix.py  gates.py  learnings.py  orchestrator.py  runtime.py  source.py  storage.py  validate.py  waves.py  workspace.py  worktree.py
models/: __init__.py  deepseek_flash.py  deepseek_pro.py  default.py  glm.py  glm_flash.py  minimax.py
promptfoo/: README.md  promptfooconfig.yaml  run-claude.sh
scripts/: analyze.sh  com.sw.poll-issues.plist  com.sw.poll-tasks.plist  lock_exec.py  poll-issues.sh  poll-tasks.sh  run-bg.sh  run.sh  stats.sh  status.sh  tail.sh  test_stats_header.sh  watch-runs.sh
tests/: conftest.py  test_destination.py  test_destination_dry_run.py  test_dry_run.py  test_dry_run_cli.py  test_dry_run_flag.py  test_gates.py  test_models.py  test_storage.py
work/: alternative-engine-plan.md  ccq-merge-plan.md  ccq-vs-simple-workflow.md  claude-code-ecosystem.md  cleanup-report.md  coding-agent-subscriptions.md  coding-subscriptions-real.md  dashboard-plan.md  db-schema-research.md  glm-5.2-deep-dive.md  implementation-plan.md  indiedevdan-research.md  mac-server-health-patterns.md  mac-studio-auto-restart.md  mac-studio-headless-setup.md  mobile-workflow-research.md  pipeline-comparison.md  repo-audit.md  skills-research.md  (+6 more)
(+154 files in other folders)
