[project]
name = "simple-workflow"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openhands = [
    "openhands-sdk>=1.24.0",
    "openhands-tools>=1.24.0",
]

[tool.setuptools.packages.find]
include = ["engines*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
sw = "engines.github_claude.orchestrator:main"
sw-openhands = "engines.github_openhands.orchestrator:main"
